# cash-tracker

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.json  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml  main.yml
assets/: help.txt
assets/llm/: system_prompt.txt
src/: lib.rs  main.rs
src/communication/: error_alert.rs  mod.rs  telegram.rs
src/configuration/: mod.rs
src/core/: cache.rs  http.rs  mod.rs  service.rs  service_manager.rs
src/database/: mod.rs  types.rs
src/request/: llm.rs  mod.rs  tools.json  tools.rs  types.rs  visualization.rs
