[package]
name = "cash-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
dotenvy = "0.15.7"
libsql = "0.9.24"
reqwest = { version = "0.12.22", features = ["json", "multipart"] }
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.139"
teloxide = { version = "0.12", features = ["macros"] }
thiserror = "2.0.12"
tokio = { version ="1.47.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }